change number of block per sample (max) in bboot_phylose and bboot_indices

--- a/vignettes/Workflow.Rmd
+++ b/vignettes/Workflow.Rmd
@@ -12,7 +12,8 @@ vignette: >
 
 Install packages: 
 ```{r }
-pkgs <- c("ggplot2","doParallel","foreach","reshape2","dplyr","gridExtra","phyloseq","DESeq2","tidyr","BiocParallel","ggfortify","R.utils","edgeR","limma","ashr")
+pkgs <- c("ggplot2","dplyr","tidyr","phyloseq","DESeq2","BiocParallel","edgeR","limma","ashr","gridExtra")
+#pkgs <- c("doParallel","foreach","reshape2","gridExtra","ggfortify","R.utils")
 
 #   installed packages that were not installed already
 # source("http://bioconductor.org/biocLite.R")
@@ -61,7 +62,7 @@ p <- ggplot(samdf)+
     facet_wrap(~Preterm)+
     scale_color_discrete(name  ="Group",breaks=c("FALSE", "TRUE"),labels=c("Term", "Preterm"))
 
-ggsave("./sampling_schedule.pdf",plot=p,width = 8,height = 5.5)
+#ggsave("./sampling_schedule.pdf",plot=p,width = 8,height = 5.5)
 ```
 
 #   Preprocessig
@@ -93,7 +94,7 @@ leg <- plot.legend(p.all[[1]])
 plist <- lapply(p.all,function(x){x+theme(legend.position="none")})
 
 pp1 <-grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),leg,ncol=2,widths=c(10,2))
-ggsave("./core_Sim.eps",plot=pp1,width = 8,height = 5.5)
+#ggsave("./core_Sim.eps",plot=pp1,width = 8,height = 5.5)
 ```
 
 #   EDA: lag-plot for each taxa
