changed all fun names

--- a/vignettes/Workflow.Rmd
+++ b/vignettes/Workflow.Rmd
@@ -84,7 +84,7 @@ plot.legend <- function(p){
 #   EDA: correlogram
 ```{r eval=FALSE}
 ps.tr <- psTransform(ps,factors="Preterm") 
-p.all <- LMic_correloram_multaxa(ps.tr, factors="Preterm",time="Time",1,6,taxlevel = "Genus")
+p.all <- longCorreloMultiple(ps.tr, factors="Preterm",time="Time",1,6,taxlevel = "Genus")
 
 #   Change the legend labels
 p.all <- lapply(p.all, function(x){x+scale_fill_discrete(name  ="Group",breaks=c("FALSE", "TRUE"),labels=c("Term", "Preterm"))})
@@ -100,7 +100,7 @@ pp1 <-grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),leg,ncol=2,wi
 #   EDA: lag-plot for each taxa
 ```{r eval=FALSE}
 lags <- as.list(seq(1,8))
-p.lags <- lapply(lags,function(x){LMic_lagged(ps.tr,factors="Preterm",time="Time",taxon=1,x,taxlevel="Genus")})
+p.lags <- lapply(lags,function(x){longLagPlot(ps.tr,factors="Preterm",time="Time",taxon=1,x,taxlevel="Genus")})
 
 #   Change the legend labels
 p.lags <- lapply(p.lags, function(x){x+scale_color_discrete(name  ="Group",breaks=c("FALSE", "TRUE"),labels=c("Term", "Preterm"))})
@@ -110,7 +110,7 @@ plist <- lapply(p.lags,function(x){x+theme(legend.position="none")})
 
 pp2 <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3,3)),leg,ncol=2,widths=c(10,2))
 
-ggsave("./lag_sim.eps",plot=pp2,width = 8,height = 5.5)
+#ggsave("./lag_sim.eps",plot=pp2,width = 8,height = 5.5)
 
 ```
 
@@ -126,7 +126,7 @@ plist <- lapply(p.all,function(x){x+theme(legend.position="none")})
 
 pp3 <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),leg,ncol=2,widths=c(10,2))
 
-ggsave("./vario_sim.eps",plot=pp3,width = 8,height = 5.5)
+#ggsave("./vario_sim.eps",plot=pp3,width = 8,height = 5.5)
 ```
 
 #   Run subsampling procedure with initial block size 
@@ -135,9 +135,9 @@ R <- 2
 RR <- 2
 factors <- "Preterm"
 time <- "Time"
-lI <- 5
+lI <- 2
 omega <- .6
-system.time(mse_results <- bboot_optblocksize(ps,R=R,RR=RR,factors=factors,time=time,subjectidvar="SubjectID",lI=lI,omega=omega))
+system.time(mse_results <- bootLongSubsampling(ps,R=R,RR=RR,factors=factors,time=time,subjectidvar="SubjectID",lI=lI,omega=omega))
 saveRDS(mse_results,"./bboot_sim.rds")
 ```
 
@@ -173,12 +173,12 @@ l.opt
 
 #   Run MBB with the optimal block size
 ```{r eval=FALSE}
-R <- 200
-RR <- 50
+R <- 2
+RR <- 5
 factors <- "Preterm"
 time <- "Time"
 
-system.time(bboot_res <- bboot_LMic(ps,b=l.opt,R=R,RR=RR,factors=factors,time=time))
+system.time(bboot_res <- bootLongMethod(ps,b=l.opt,R=R,RR=RR,factors=factors,time=time))
 saveRDS(bboot_res,"./bboot_sim.rds")
 ```
 
