--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -33,7 +33,7 @@ pkgs <- c("ggplot2","dplyr","tidyr",
 
 #   installed packages that were not installed already
 source("http://bioconductor.org/biocLite.R")
-biocLite(setdiff(pkgs,installed.packages()))
+biocLite(setdiff(pkgs,installed.packages()), suppressUpdates = TRUE)
 
 #devtools::install_github("PratheepaJ/bootLong")
 ```
