--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -129,7 +129,7 @@ ps <- prune_taxa(keep_asv,ps)
 ##  Exploratory analysis
 
 - Extract the common legend [https://github.com/hadley/ggplot2/wiki/Share-a-legend-between-two-ggplot2-graphs]
-```{r }
+```{r common-legend}
 plot_common_legend <- function(p){
     ggplot_feature = ggplot_gtable(ggplot_build(p))
     le <- which(sapply(ggplot_feature$grobs, function(x) x$name) == "guide-box")
@@ -139,20 +139,41 @@ plot_common_legend <- function(p){
 ```
 
 ###  Correlogram
-```{r message=FALSE,warning=FALSE,fig.width=7.5,fig.height=5.5}
-ps.tr <- psTransform(ps, main_factor="Preterm", span = .5) 
-p.all <- longCorreloMultiple(ps.tr[[1]],ps.tr[[2]], factors="Preterm",time="Time",1,6,taxlevel = "Genus")
+```{r corr}
+ps.tr <- psTransform(ps, 
+                     main_factor = "Preterm", 
+                     span = .5) 
+
+p.all <- longCorreloMultiple(ps.tr[[1]],
+                             ps.tr[[2]], 
+                             factors="Preterm", 
+                             time="Time", 
+                             1, 
+                             6,
+                             taxlevel = "Genus")
 
 #   Change the legend labels
-p.all <- lapply(p.all, function(x){x+scale_fill_discrete(name  ="Group",breaks=c("FALSE", "TRUE"),labels=c("Term", "Preterm"))})
+p.all <- lapply(p.all, function(x){
+    x+scale_fill_discrete(name  ="Group", breaks=c("FALSE", "TRUE"), labels = c("Term", "Preterm"))
+    })
 
-#   add only a common legend for all taxa
+#   extract the common legend for all taxa
 leg <- plot_common_legend(p.all[[1]])
-plist <- lapply(p.all,function(x){x+theme(legend.position="none")})
 
-#pp1 <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),leg,ncol=2,widths=c(10,2))
-grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),leg,ncol=2,widths=c(10,2))
-#ggsave("./core_Sim.eps",plot=pp1,width = 8,height = 5.5)
+plist <- lapply(p.all,function(x){
+    x+theme(legend.position="none")
+    })
+
+# p <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),
+#                   leg,
+#                   ncol=2,
+#                   widths=c(10,2))
+# ggsave("./core_Sim.eps",plot=p,width = 8,height = 5.5)
+
+grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),
+             leg,
+             ncol=2,
+             widths=c(10,2))
 ```
 
 #   EDA: lag-plot for each taxa
