--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -139,17 +139,17 @@ plot_common_legend <- function(p){
 ```
 
 ###  Correlogram
-```{r corr}
+```{r corr, message=FALSE, warning=FALSE}
 ps.tr <- psTransform(ps, 
                      main_factor = "Preterm", 
                      span = .5) 
 
 p.all <- longCorreloMultiple(ps.tr[[1]],
                              ps.tr[[2]], 
-                             factors="Preterm", 
-                             time="Time", 
-                             1, 
-                             6,
+                             main_factor = "Preterm", 
+                             time_var = "Time", 
+                             starttaxa = 1, 
+                             endtaxa = 6,
                              taxlevel = "Genus")
 
 #   Change the legend labels
@@ -176,36 +176,75 @@ grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),
              widths=c(10,2))
 ```
 
-#   EDA: lag-plot for each taxa
-```{r message=FALSE,warning=FALSE,fig.width=7.5,fig.height=5.5}
+
+### longitudinal data lag-plots
+```{r lag-plots, message=FALSE,warning=FALSE}
 lags <- as.list(seq(1,8))
-p.lags <- lapply(lags,function(x){longLagPlot(ps.tr[[2]],factors="Preterm",time="Time",taxon=1,x,taxlevel="Genus")})
+
+p.lags <- lapply(lags,function(x){
+    longLagPlot(ps.tr[[2]], main_factor="Preterm", time_var = "Time", taxon = 1, x, taxlevel="Genus")})
 
 #   Change the legend labels
-p.lags <- lapply(p.lags, function(x){x+scale_color_discrete(name  ="Group",breaks=c("FALSE", "TRUE"),labels=c("Term", "Preterm"))})
+p.lags <- lapply(p.lags, function(x){
+    x+scale_color_discrete(name  ="Group", breaks=c("FALSE", "TRUE"), labels=c("Term", "Preterm"))
+    })
 
 leg <- plot_common_legend(p.lags[[1]])
-plist <- lapply(p.lags,function(x){x+theme(legend.position="none")})
 
-#pp2 <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3,3)),leg,ncol=2,widths=c(10,2))
-grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3,3)),leg,ncol=2,widths=c(10,2))
-#ggsave("./lag_sim.eps",plot=pp2,width = 8,height = 5.5)
+plist <- lapply(p.lags,function(x){
+    x+theme(legend.position="none")
+    })
+
+
+# p <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3,3)),
+#                   leg,
+#                   ncol=2,
+#                   widths=c(10,2))
+# 
+# ggsave("./lag_sim.eps",plot=p,width = 8,height = 5.5)
+
+grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3,3)), 
+             leg, 
+             ncol=2, 
+             widths=c(10,2))
 
 ```
 
-#   EDA: explore correlation structure using variogram
+### Variogram for longitudinal data
+
 ```{r message=FALSE,warning=FALSE,fig.width=7.5,fig.height=5.5}
-p.all <- longVarioMultiple(ps.tr[[1]],ps.tr[[2]], factors="Preterm",time="Time",1,6,taxlevel = "Genus")
+p.all <- longVarioMultiple(ps.tr[[1]],
+                           ps.tr[[2]],
+                           main_factor = "Preterm",
+                           time_var="Time",
+                           subjectID_var = "SubjectID",
+                           starttaxa = 1,
+                           endtaxa = 6,
+                           point = FALSE,
+                           taxlevel = "Genus")
 
 #   Change the legend labels
-p.all <- lapply(p.all, function(x){x+scale_color_discrete(name  ="Group",breaks=c("FALSE", "TRUE"),labels=c("Term", "Preterm "))})
+p.all <- lapply(p.all, function(x){
+    x + scale_color_discrete(name  ="Group", breaks=c("FALSE", "TRUE"), labels=c("Term", "Preterm "))
+    })
 
 leg <- plot_common_legend(p.all[[1]])
-plist <- lapply(p.all,function(x){x+theme(legend.position="none")})
 
-#pp3 <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),leg,ncol=2,widths=c(10,2))
-grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),leg,ncol=2,widths=c(10,2))
-#ggsave("./vario_sim.eps",plot=pp3,width = 8,height = 5.5)
+plist <- lapply(p.all,function(x){
+    x + theme(legend.position="none")
+    })
+
+# p <- grid.arrange(arrangeGrob(grobs=plist, nrow=2, widths=c(3,3,3)),
+#                   leg,
+#                   ncol=2,
+#                   widths=c(10,2))
+# 
+# ggsave("./vario_sim.eps", plot=p, width = 8, height = 5.5)
+
+grid.arrange(arrangeGrob(grobs=plist, nrow=2, widths=c(3,3,3)),
+             leg,
+             ncol=2,
+             widths=c(10,2))
 ```
 
 #   Run subsampling procedure with initial block size 
