--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -141,8 +141,7 @@ plot_common_legend <- function(p){
 ###  Correlogram
 ```{r corr, message=FALSE, warning=FALSE}
 ps.tr <- psTransform(ps, 
-                     main_factor = "Preterm", 
-                     span = .5) 
+                     main_factor = "Preterm") 
 
 p.all <- longCorreloMultiple(ps.tr[[1]],
                              ps.tr[[2]], 
