--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -138,6 +138,43 @@ plot_common_legend <- function(p){
 }
 ```
 
+###  PACF
+```{r pacf, message=FALSE, warning=FALSE}
+ps.tr <- psTransform(ps, 
+                     main_factor = "Preterm") 
+
+p.all <- longPACFMultiple(ps.tr[[1]],
+                             ps.tr[[2]], 
+                             main_factor = "Preterm", 
+                             time_var = "Time", 
+                             starttaxa = 1, 
+                             endtaxa = 6,
+                             taxlevel = "Genus")
+
+#   Change the legend labels
+p.all <- lapply(p.all, function(x){
+    x+scale_fill_discrete(name  ="Group", breaks=c("FALSE", "TRUE"), labels = c("Term", "Preterm"))
+    })
+
+#   extract the common legend for all taxa
+leg <- plot_common_legend(p.all[[1]])
+
+plist <- lapply(p.all,function(x){
+    x+theme(legend.position="none")
+    })
+
+# p <- grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),
+#                   leg,
+#                   ncol=2,
+#                   widths=c(10,2))
+# ggsave("./core_Sim.eps",plot=p,width = 8,height = 5.5)
+
+grid.arrange(arrangeGrob(grobs=plist,nrow=2,widths=c(3,3,3)),
+             leg,
+             ncol=2,
+             widths=c(10,2))
+```
+
 ###  Correlogram
 ```{r corr, message=FALSE, warning=FALSE}
 ps.tr <- psTransform(ps, 
@@ -250,7 +287,7 @@ grid.arrange(arrangeGrob(grobs=plist, nrow=2, widths=c(3,3,3)),
 #   The block bootstrap method
 
 ## Subsampling   
-```{r message=FALSE,warning=FALSE}
+```{r message=FALSE,warning=FALSE, eval=FALSE}
 R <- 5
 RR <- 5
 main_factor <- "Preterm"
